Reordered the code in a more readable way.Added notifications on incomplete data, solved some bugs with the categories.

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -44,7 +44,6 @@ button{
 .loadingPurchase{
     color:red;
     font-family: 'Raleway', sans-serif;
-    display: none;
     font-size: small;
 }
 .selectedCategory{
